Fixed errors with contrast

--- a/CSS/stylesheet.css
+++ b/CSS/stylesheet.css
@@ -225,7 +225,7 @@ height: 400px;
 
 footer {
 
-    background-color: #7D7B7B;
+    background-color: #575555;
     height: 350px;
     width: 100%;
     
@@ -573,6 +573,7 @@ textarea {
     display: flex;
     flex-direction: column;
     align-items: center;
+    height: 450px;
 }
   
     .hideaway {
